--- a/src/main/resources/templates/dealer/myCustomerDetail.html
+++ b/src/main/resources/templates/dealer/myCustomerDetail.html
@@ -566,9 +566,9 @@
         </a>
       </li>
       <li>
-        <a class="menu-item">
+        <a th:href="@{/dealer/sale}" class="menu-item">
           <span class="menu-item__bullet"></span>
-          <span>보고서 / 분석</span>
+          <span>구매 관리</span>
         </a>
       </li>
     </ul>
