--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@1.3.9/dist/web/static/pretendard.css">
 <header class="pb-3 mb-5">
-  <div class="container d-flex align-items-center hyu-header">
+  <div class="container d-flex align-items-center hyu-header h-font">
 
     <!-- 왼쪽: 로고 -->
     <div class="main-logo">
